Update user endpoint
