# backend/storage/api-docs/api-docs.json
@@ -366,6 +366,67 @@
                         "description": "Unauthenticated"
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "update authenticated user data",
+                "description": "Update authenticated user data",
+                "operationId": "72f23373f2789b1d358420df88b8f6e0",
+                "requestBody": {
+                    "description": "User data to update",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "first_name",
+                                    "last_name",
+                                    "email"
+                                ],
+                                "properties": {
+                                    "first_name": {
+                                        "type": "string",
+                                        "example": "John"
+                                    },
+                                    "last_name": {
+                                        "type": "string",
+                                        "example": "Doe"
+                                    },
+                                    "email": {
+                                        "type": "email",
+                                        "example": "john@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "password",
+                                        "example": "password"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "password",
+                                        "example": "password"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResponse"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
             }
         },
         "/api/v1/websites/{website}": {
